<resources>
    <string name="app_name">Dice Roller</string>
    <string name="click_the_roll_button_below_to_roll_the_dice">Click the ROLL Button below to roll the dice</string>
    <string name="roll">ROLL</string>
    <string name="copyright_text">©~NightXStudio Productions</string>
    <string name="dice_image">Dice Image</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="copyright_nightxstudio_about_section">©~NightXStudio Productions ~ Sai Pritam Panda</string>
    <string name="aboutText7">THANK YOU ALL FOR YOUR SUPPORT!</string>
    <string name="diceroller_year">© 2022 DiceRoller</string>
    <string name="production_contact_details">Production Contact Details:</string>
    <string name="e_mail_nightxstudio15_gmail_com">• E-Mail: nightxstudio15@gmail.com</string>
    <string name="feedback">Feel absolutely free to give feedback or any suggestions for the improvement of the app for better benefits</string>
    <string name="founder_contact_details">Founder Contact Details:</string>
    <string name="sai_pritam_panda">(Sai Pritam Panda)</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
</resources>